# hms-scene-GoodCulling-demo

./: README.md  README_ZH.md
goodCullingDemo/: build.gradle  settings.gradle
goodCullingDemo/app/: CMakeLists.txt  agconnect-services.json  build.gradle
goodCullingDemo/app/src/androidTest/java/com/huawei/hms/scene/demo/goodculling/: ExampleInstrumentedTest.java
goodCullingDemo/app/src/main/: AndroidManifest.xml
goodCullingDemo/app/src/main/cpp/: goodculling-demo.cpp
goodCullingDemo/app/src/main/cpp/include/: GoodCulling.h
goodCullingDemo/app/src/main/java/com/huawei/hms/scene/demo/goodculling/: MainActivity.java
goodCullingDemo/app/src/main/res/layout/: activity_main.xml
goodCullingDemo/app/src/main/res/values/: strings.xml
goodCullingDemo/gradle/wrapper/: gradle-wrapper.properties
